<resources>
    <string name="app_name">المدينة الالكترونية</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ras">تعد محمية رأس محمد  من أفضل شواطئ وأماكن الغوص في .... اقرأالمزيد</string>
    <string name="title_activity_data_vieweer">DataVieweer</string>
    <string name="welcome">أهلا وسهلا !</string>
    <string name="smallDesc">تعد شرم الشيخ من الاماكن الجذابه فى العالم حيث تقع على خليج العقبه والتى تبعد حوالى 300 كم عن محميه راس محمد الوطنيه بالاضافه الى ذلك احتوائها على افضل الاماكن السياحيه .</string>
    <string name="title2">أهم المعالم السياحية</string>
    <string name="smallDesc2"> الغطس في رأس محمد</string>
    <string name="smallDesc3">الإبحار بالمظلات في خليج نعمة</string>
    <string name="smallDesc4"> التزحلق علي الماء</string>
    <string name="title_activity_data_vieweer2">DataVieweer2</string>
    <string name="about">تُعرف شرم الشيخ  بشمسها المشرقة ومياها الدافئة طوال العام. يمكنك خلال وجودك فيها، الاستمتاع بالشمس والغطس لمشاهدة الشعاب المرجانية الرائعة والاستفادة من بحرها الجميل للحصول على قسط من الراحة والاسترخاء. </string>
    <string name="ghos">تعد محمية "رأس محمد" من أفضل شواطئ وأماكن الغوص في العالم. فالجميع يتحدث عنها كبقعة من جنان الأرض، فوق الأرض وتحت المياه. إنه مكان نادر حيث أصبحت زيارة "رأس محمد" محطة إلزامية لدى كل سائح يصل منطقة شرم الشيخ في سيناء. ويتميز موقع "رأس محمد" عن غيره من مواقع الغوص والغطس بأنّ عناصر الجذب فيه تتوزع بين مناطقه التي فوق الماء وتلك التي تحته. فحتى أولئك الذين لا يتقنون الغوص والغطس أو لا يفضلانهما، يأتون إلى المكان بالآلاف من أجل التمتع بشواطئه النادرة الجميلة.
ما يميز "رأس محمد" أيضًأ وقوعه عند مفترق طرق مائيّ هام، حيث أنّ التيارات المائية القادمة من خليج العقبة وخليج السويس والبحر الأحمر توفر كميات كبيرة من الغذاء للحياة البحرية في "رأس محمد"، ممّا يجعل الحياة السمكية والمرجانية فيه مكانًا لا ثاني له. فجرى حتى الآن توثيق أكثر من ٢٠٠ نوع من الشعب المرجانية و١,٠٠٠ نوع من الأسماك.
يتراوح عمق منطقة الغطس في "رأس محمد" بين بضعة أمتار وحتى ٨٠٠ متر، تتخللها هضاب ومنزلقات والكثير من المناظر الساحرة تحت الماء. وقد طرأت تغيرات على مبنى الشاطئ والطبقات في المنطقة على مرّ آلاف السنين، فنشأت قبل ٧٠,٠٠٠ مناطق شاسعة من الشعب المرجانية النادرة، تتدلى إلى عمق قرابة ١٠٠ متر تحت سطح البحر. كما أنّ وقوع المنطقة بين التقاء مياه خليج العقبة بخليج السويس، أدى إلى اختلاط مياه من المنطقتين بدرجات ملوحة مختلفة، وبالتالي إلى نشوء أشكال خلابة ومختلفة من الشعب والسلاسل الصخورية إلى جانب وجود أسماك محيطية مختلفة ونادرة وجدران مرجانية ووافرة.
من أجل الحفاظ على المحمية ونظافتها، يعكف حراس جوالون على تمشيط المحمية الطبيعية في رأس محمد بشكل دائم، بشطآنها ومياهها البحرية، من أجل الحفاظ على نظافتها البدئية. وإلى جانب كل ذلك، يزيد تميّز محمية رأس محمد عن المناطق السياحية الشعبية النادرة في العالم، بأنه لا توجد فيها مصبات أنهار أو وديان في شواطئها، وبالتالي تحافظ هذه الشطآن على ثباتها وخصوصيتها المحلية.
في رحلة غوص واحدة تحت الماء يمكن الانتقال من سلسلة يولندا والقرش إلى مدينة شقائق النعمان، حيث تجد آلاف الأسماك وشقائق النعمان على عمق ١٠-٢٠ مترًا. في هذه الغطسة الطويلة يمكنك المرور بهذه الأمكنة والتمتع بغطس نادر جدًا في منطقة شرم الشيخ كلها.</string>

</resources>
