<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="254dp"
                app:srcCompat="@drawable/welcome" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:id="@+id/welcome"
                android:textDirection="rtl"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.12"
                android:gravity="center"
                android:text="@string/smallDesc"
                android:textSize="20dp"
                android:textDirection="rtl"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:id="@+id/bestplaces"
                android:textDirection="rtl"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.12"
                android:gravity="center"
                android:text="@string/smallDesc2"
                android:layout_marginBottom="5dp"
                android:textDirection="rtl"
                android:textSize="22dp"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.12"
                android:gravity="center"
                android:text="@string/smallDesc3"
                android:layout_marginBottom="5dp"
                android:textDirection="rtl"
                android:textSize="22dp"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.12"
                android:gravity="center"
                android:text="@string/smallDesc4"
                android:layout_marginBottom="20dp"
                android:textSize="22dp"
                android:textDirection="rtl"/>

        </LinearLayout>
</ScrollView>

</RelativeLayout>